# maxreq

./: .gitignore  illustration.xlsx  linkedin-post-20251208.txt  linkedin-post-20251220-english.txt  linkedin-post-20251220-french.txt  linkedin-post-debian.txt  linkedin-post.txt  maxreq.sln  readme.md  result.txt  simple-perf-test.ps1
bun/: Dockerfile  README.md  index.ts  package.json  start_docker.sh  stop_docker.sh
cpp/: README.MD  cpp.cpp  cpp.vcxproj  vcpkg.json
cpp/CppServer/: CppServer.sln  CppServer.vcxproj  CppServer.vcxproj.filters  http_server.cpp  readme.md
cpp/drogon/: CMakeLists.txt  README.md  build.sh  cpp.cpp  cpp.sln  vcpkg.json
cpp/uWebSockets/: build.sh  build.txt  files.txt  makefile  maxreq  maxreq.cpp  readme.md
dotnet-mini/: DatabaseService.cs  Program.cs  Readme.md  dotnet-mini.csproj  dotnet-mini.sln
dotnet-mini/Properties/: launchSettings.json
dotnet/UserTokenApi/: Program.cs  README.md  UserTokenApi.csproj  UserTokenApi.http  appsettings.json
dotnet/UserTokenApi/Controllers/: AuthController.cs
dotnet/UserTokenApi/DTOs/: AuthDTOs.cs
dotnet/UserTokenApi/Models/: User.cs
dotnet/UserTokenApi/Properties/: launchSettings.json
dotnet/UserTokenApi/Services/: DatabaseService.cs
dotnet_test/ApiLoadTester/: ApiLoadTester.csproj  Program.cs  README.md
dotnet_test/ApiLoadTester/Properties/: launchSettings.json
go/: INSTALL_AND_BENCHMARK.md  README.md  go.mod  go.sum  main.go
java/: Dockerfile.Azul  Dockerfile.GraalVM  Dockerfile.OpenJ9  Dockerfile.Temurin  README.md  pom.xml  start_azul.sh  start_graalvm.sh  start_openj9.sh  start_temurin.sh  stop_java.sh
java/src/main/java/com/example/usertokenapi/: UserTokenApiApplication.java
java/src/main/java/com/example/usertokenapi/controller/: AuthController.java  HealthController.java
java/src/main/java/com/example/usertokenapi/dto/: LoginRequest.java  LoginResponse.java
java/src/main/java/com/example/usertokenapi/model/: User.java
java/src/main/java/com/example/usertokenapi/service/: DatabaseService.java
java/src/main/resources/: application.properties
javamini/: Dockerfile.Azul  Dockerfile.GraalVM-mini  Dockerfile.OpenJ9  README.md  pom.xml  start_azul-mini.sh  start_graalvm-mini.sh  start_openj9-mini.sh  stop_java.sh
javamini/src/main/java/javamini/: App.java
nginx/: readme.md
nginx/conf/: nginx.conf
nodejs/: README.md  docker-compose.traefik.yml  ecosystem.config.js  hash-generator.js  index.js  nodejs-api  package-lock.json  package.json  performance-tester.js  setup.sh  start-cluster.sh  start-traefik.sh  start.sh  stop-cluster.sh  stop-traefik.sh  stop.sh  test-requests.http  traefik-dynamic.yml  traefik.yml
nodejs-fast/: README.md  index.js  package-lock.json  package.json  post.lua
php/: README.md  index.php  setup.sh  start.bat  start.sh  stop.sh
python/: README.md  ecosystem.config.js  install_python_uv.sh  main.py  start.bat  start_python.sh  stop_python.sh
rust/: SETUP.md
rust/khttp/: Cargo.toml  README.md  khttp.rs
rust/rust-mini/: CLIENT_README.md  Cargo.toml  README.md
rust/rust-mini/src/: client.rs
rust/user-token-api/: Cargo.toml  README.md
rust/user-token-api-actix/: Cargo.toml  README.md
rust/user-token-api-actix/src/: main.rs  server-actix.rs
rust/user-token-api/src/: lib.rs  main.rs  server-tokio.rs
