[package]
name = "rust-mini"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rust-mini"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = "0.32"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
