[package]
name = "user-token-api-actix"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"