[package]
name = "user-token-api-actix"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10.9"
hex = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
num_cpus = "1.17.0"