[package]
name = "user-token-api"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
