[package]
name = "user-token-api"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "user-token-api"
path = "src/server-tokio.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10.9"
hex = "0.4.3"
tower = "0.4"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
num_cpus = "1.17.0"
